drJ_y.output
   0  $accept : CompilationUnit $end

   1  Literal : INTLIT
   2          | DOUBLELIT
   3          | BOOLTRUE
   4          | BOOLFALSE
   5          | STRINGLIT
   6          | NULLVAL

   7  Type : PrimitiveType
   8       | ReferenceType

   9  PrimitiveType : NumericType
  10                | BOOL
  11                | STRING

  12  NumericType : INT
  13              | DOUBLE

  14  ReferenceType : ClassType
  15                | DefaultTableMap
  16                | ListType
  17                | TableType

  18  ClassType : Name

  19  ListType : LIST
  20           | LIST LESSTHAN LegalElement GREATERTHAN

  21  TableType : TABLE
  22            | TABLE LESSTHAN LegalElement GREATERTHAN
  23            | TABLE LESSTHAN TableIndex COMMA LegalElement GREATERTHAN

  24  LegalElement : INT
  25               | DOUBLE
  26               | STRING
  27               | ClassType

  28  TableIndex : INT
  29             | STRING

  30  DefaultTableMap : Name LEFTSUBSCRIPT RIGHTSUBSCRIPT

  31  Name : SimpleName
  32       | QualifiedName

  33  SimpleName : IDENTIFIER
  34             | CLASSNAME

  35  QualifiedName : Name PERIOD IDENTIFIER

  36  CompilationUnit : TypeDeclarationsOpt

  37  TypeDeclarationsOpt : TypeDeclarations
  38                      |

  39  TypeDeclarations : TypeDeclaration
  40                   | TypeDeclarations TypeDeclaration

  41  TypeDeclaration : ClassDeclaration
  42                  | ClassMemberDeclaration

  43  ClassDeclaration : CLASS IDENTIFIER ClassBody SEMICOLON

  44  ClassBody : LEFTBRACE ClassBodyDeclarationsOpt RIGHTBRACE

  45  ClassBodyDeclarationsOpt : ClassBodyDeclarations
  46                           |

  47  ClassBodyDeclarations : ClassBodyDeclaration
  48                        | ClassBodyDeclarations ClassBodyDeclaration

  49  ClassBodyDeclaration : ClassMemberDeclaration
  50                       | ConstructorDeclaration

  51  ClassMemberDeclaration : FieldDeclaration
  52                         | MethodDeclaration

  53  FieldDeclaration : Type VariableDeclarators SEMICOLON

  54  VariableDeclarators : VariableDeclarator
  55                      | VariableDeclarators COMMA VariableDeclarator

  56  VariableDeclarator : VariableDeclaratorId

  57  VariableDeclaratorId : IDENTIFIER
  58                       | VariableDeclaratorId LEFTSUBSCRIPT RIGHTSUBSCRIPT

  59  MethodDeclaration : MethodHeader Block

  60  MethodHeader : Type MethodDeclarator
  61               | VOID MethodDeclarator

  62  FormalParameterListOpt : FormalParameterList
  63                         |

  64  MethodDeclarator : IDENTIFIER LEFTPAREN FormalParameterListOpt RIGHTPAREN
  65                   | MethodDeclarator LEFTSUBSCRIPT RIGHTSUBSCRIPT

  66  FormalParameterList : FormalParameter
  67                      | FormalParameterList COMMA FormalParameter

  68  FormalParameter : Type VariableDeclaratorId

  69  ConstructorDeclaration : ConstructorDeclarator ConstructorBody

  70  ConstructorDeclarator : SimpleName LEFTPAREN FormalParameterListOpt RIGHTPAREN

  71  ExplicitConstructorInvocationOpt : ExplicitConstructorInvocation
  72                                   |

  73  ArgumentListOpt : ArgumentList
  74                  |

  75  ConstructorBody : LEFTBRACE ExplicitConstructorInvocationOpt BlockStatementsOpt RIGHTBRACE SEMICOLON

  76  ExplicitConstructorInvocation : LEFTPAREN ArgumentListOpt RIGHTPAREN SEMICOLON

  77  Block : LEFTBRACE BlockStatementsOpt RIGHTBRACE SEMICOLON

  78  BlockStatementsOpt : BlockStatements
  79                     |

  80  BlockStatements : BlockStatement
  81                  | BlockStatements BlockStatement

  82  BlockStatement : LocalVariableDeclarationStatement
  83                 | Statement

  84  LocalVariableDeclarationStatement : LocalVariableDeclaration SEMICOLON

  85  LocalVariableDeclaration : Type VariableDeclarators

  86  Statement : StatementWithoutTrailingSubstatement
  87            | IfThenStatement
  88            | IfThenElseStatement
  89            | IfThenElseIfStatement
  90            | WhileStatement
  91            | ForStatement

  92  StatementWithoutTrailingSubstatement : Block
  93                                       | EmptyStatement
  94                                       | ExpressionStatement
  95                                       | BreakStatement
  96                                       | ReturnStatement

  97  EmptyStatement : SEMICOLON

  98  ExpressionStatement : StatementExpression SEMICOLON

  99  StatementExpression : Assignment
 100                      | MethodInvocation
 101                      | ClassInstanceCreationExpression

 102  IfThenStatement : IF LEFTPAREN Expression RIGHTPAREN Block

 103  IfThenElseStatement : IF LEFTPAREN Expression RIGHTPAREN Block ELSE Block

 104  IfThenElseIfStatement : IF LEFTPAREN Expression RIGHTPAREN Block ElseIfSequence
 105                        | IF LEFTPAREN Expression RIGHTPAREN Block ElseIfSequence ELSE Block

 106  ElseIfSequence : ElseIfStatement
 107                 | ElseIfSequence ElseIfStatement

 108  ElseIfStatement : ELSE IF LEFTPAREN Expression RIGHTPAREN Block

 109  WhileStatement : WHILE LEFTPAREN Expression RIGHTPAREN Statement

 110  ForInitOpt : ForInit
 111             |

 112  ExpressionOpt : Expression
 113                |

 114  ForUpdateOpt : ForUpdate
 115               |

 116  ForStatement : FOR LEFTPAREN ForInitOpt SEMICOLON ExpressionOpt SEMICOLON ForUpdateOpt RIGHTPAREN Block

 117  ForInit : StatementExpressionList
 118          | LocalVariableDeclaration

 119  ForUpdate : StatementExpressionList

 120  StatementExpressionList : StatementExpression
 121                          | StatementExpressionList COMMA StatementExpression

 122  IDENTOpt : IDENTIFIER
 123           |

 124  BreakStatement : BREAK IDENTOpt SEMICOLON

 125  ReturnStatement : RETURN ExpressionOpt SEMICOLON

 126  Primary : Literal
 127          | LEFTPAREN Expression RIGHTPAREN
 128          | FieldAccess
 129          | MethodInvocation
 130          | ListTableAccess

 131  ClassInstanceCreationExpression : ClassType LEFTPAREN ArgumentListOpt RIGHTPAREN

 132  ArgumentList : Expression
 133               | ArgumentList COMMA Expression

 134  FieldAccess : Primary PERIOD IDENTIFIER

 135  MethodInvocation : Name LEFTPAREN ArgumentListOpt RIGHTPAREN
 136                   | Primary PERIOD IDENTIFIER LEFTPAREN ArgumentListOpt RIGHTPAREN
 137                   | Name LEFTBRACE ArgumentListOpt RIGHTBRACE
 138                   | Primary PERIOD IDENTIFIER LEFTBRACE ArgumentListOpt RIGHTBRACE

 139  ListTableAccess : Name LEFTSUBSCRIPT Expression RIGHTSUBSCRIPT
 140                  | Primary LEFTSUBSCRIPT Expression RIGHTSUBSCRIPT
 141                  | Name LEFTSUBSCRIPT Expression COLON Expression RIGHTSUBSCRIPT

 142  PostFixExpression : Primary
 143                    | Name

 144  UnaryExpression : MINUS UnaryExpression
 145                  | UnaryExpressionNotPlusMinus
 146                  | DROLL UnaryExpression
 147                  | SIZE UnaryExpression

 148  UnaryExpressionNotPlusMinus : PostFixExpression
 149                              | LOGICALNOT UnaryExpression

 150  MultiplicativeExpression : UnaryExpression
 151                           | MultiplicativeExpression MULTIPLY UnaryExpression
 152                           | MultiplicativeExpression DIVIDE UnaryExpression
 153                           | MultiplicativeExpression MODULUS UnaryExpression
 154                           | MultiplicativeExpression DROLL UnaryExpression

 155  AdditiveExpression : MultiplicativeExpression
 156                     | AdditiveExpression PLUS MultiplicativeExpression
 157                     | AdditiveExpression MINUS MultiplicativeExpression

 158  RelationalExpression : AdditiveExpression
 159                       | RelationalExpression LESSTHAN AdditiveExpression
 160                       | RelationalExpression GREATERTHAN AdditiveExpression
 161                       | RelationalExpression LESSTHANOREQUAL AdditiveExpression
 162                       | RelationalExpression GREATERTHANOREQUAL AdditiveExpression

 163  EqualityExpression : RelationalExpression
 164                     | EqualityExpression ISEQUALTO RelationalExpression
 165                     | EqualityExpression NOTEQUALTO RelationalExpression

 166  ConditionalAndExpression : EqualityExpression
 167                           | ConditionalAndExpression LOGICALAND EqualityExpression

 168  ConditionalOrExpression : ConditionalAndExpression
 169                          | ConditionalOrExpression LOGICALOR ConditionalAndExpression

 170  AssignmentExpression : ConditionalOrExpression
 171                       | Assignment
 172                       | concatOpt
 173                       | ListAssignment
 174                       | TableAssignment

 175  Assignment : LeftHandSide AssignmentOperator AssignmentExpression

 176  LeftHandSide : Name
 177               | FieldAccess
 178               | ListTableAccess
 179               | DefaultTableMap

 180  AssignmentOperator : EQUALS
 181                     | INCREMENT
 182                     | DECREMENT
 183                     | SWAP

 184  Expression : AssignmentExpression

 185  ListAssignment : LEFTSUBSCRIPT ListValues RIGHTSUBSCRIPT

 186  ListValues : LegalValue
 187             | ListValues COMMA LegalValue

 188  TableAssignment : LEFTBRACE TableValues SEMICOLON RIGHTBRACE

 189  TableValues : TableObject
 190              | TableValues COMMA TableObject

 191  TableObject : LegalIndex COLON LegalValue

 192  LegalIndex : INTLIT
 193             | STRINGLIT

 194  LegalValue : INTLIT
 195             | DOUBLELIT
 196             | STRINGLIT
 197             | IDENTIFIER
 198             | CLASSNAME

 199  concatOpt : concat concat
 200            | concatOpt concat

 201  concat : Name
 202         | Primary

state 0
	$accept : . CompilationUnit $end  (0)
	TypeDeclarationsOpt : .  (38)

	DOUBLE  shift 1
	INT  shift 2
	VOID  shift 3
	IDENTIFIER  shift 4
	CLASSNAME  shift 5
	CLASS  shift 6
	LIST  shift 7
	TABLE  shift 8
	STRING  shift 9
	BOOL  shift 10
	$end  reduce 38

	CompilationUnit  goto 11
	Type  goto 12
	PrimitiveType  goto 13
	ReferenceType  goto 14
	NumericType  goto 15
	ClassType  goto 16
	DefaultTableMap  goto 17
	ListType  goto 18
	TableType  goto 19
	Name  goto 20
	SimpleName  goto 21
	QualifiedName  goto 22
	TypeDeclarationsOpt  goto 23
	TypeDeclarations  goto 24
	TypeDeclaration  goto 25
	ClassDeclaration  goto 26
	ClassMemberDeclaration  goto 27
	FieldDeclaration  goto 28
	MethodDeclaration  goto 29
	MethodHeader  goto 30


state 1
	NumericType : DOUBLE .  (13)

	.  reduce 13


state 2
	NumericType : INT .  (12)

	.  reduce 12


state 3
	MethodHeader : VOID . MethodDeclarator  (61)

	IDENTIFIER  shift 31
	.  error

	MethodDeclarator  goto 32


state 4
	SimpleName : IDENTIFIER .  (33)

	.  reduce 33


state 5
	SimpleName : CLASSNAME .  (34)

	.  reduce 34


state 6
	ClassDeclaration : CLASS . IDENTIFIER ClassBody SEMICOLON  (43)

	IDENTIFIER  shift 33
	.  error


state 7
	ListType : LIST .  (19)
	ListType : LIST . LESSTHAN LegalElement GREATERTHAN  (20)

	LESSTHAN  shift 34
	IDENTIFIER  reduce 19


state 8
	TableType : TABLE .  (21)
	TableType : TABLE . LESSTHAN LegalElement GREATERTHAN  (22)
	TableType : TABLE . LESSTHAN TableIndex COMMA LegalElement GREATERTHAN  (23)

	LESSTHAN  shift 35
	IDENTIFIER  reduce 21


state 9
	PrimitiveType : STRING .  (11)

	.  reduce 11


state 10
	PrimitiveType : BOOL .  (10)

	.  reduce 10


state 11
	$accept : CompilationUnit . $end  (0)

	$end  accept


state 12
	FieldDeclaration : Type . VariableDeclarators SEMICOLON  (53)
	MethodHeader : Type . MethodDeclarator  (60)

	IDENTIFIER  shift 36
	.  error

	VariableDeclarators  goto 37
	VariableDeclarator  goto 38
	VariableDeclaratorId  goto 39
	MethodDeclarator  goto 40


state 13
	Type : PrimitiveType .  (7)

	.  reduce 7


state 14
	Type : ReferenceType .  (8)

	.  reduce 8


state 15
	PrimitiveType : NumericType .  (9)

	.  reduce 9


state 16
	ReferenceType : ClassType .  (14)

	.  reduce 14


state 17
	ReferenceType : DefaultTableMap .  (15)

	.  reduce 15


state 18
	ReferenceType : ListType .  (16)

	.  reduce 16


state 19
	ReferenceType : TableType .  (17)

	.  reduce 17


state 20
	ClassType : Name .  (18)
	DefaultTableMap : Name . LEFTSUBSCRIPT RIGHTSUBSCRIPT  (30)
	QualifiedName : Name . PERIOD IDENTIFIER  (35)

	PERIOD  shift 41
	LEFTSUBSCRIPT  shift 42
	IDENTIFIER  reduce 18


state 21
	Name : SimpleName .  (31)

	.  reduce 31


state 22
	Name : QualifiedName .  (32)

	.  reduce 32


state 23
	CompilationUnit : TypeDeclarationsOpt .  (36)

	.  reduce 36


state 24
	TypeDeclarationsOpt : TypeDeclarations .  (37)
	TypeDeclarations : TypeDeclarations . TypeDeclaration  (40)

	DOUBLE  shift 1
	INT  shift 2
	VOID  shift 3
	IDENTIFIER  shift 4
	CLASSNAME  shift 5
	CLASS  shift 6
	LIST  shift 7
	TABLE  shift 8
	STRING  shift 9
	BOOL  shift 10
	$end  reduce 37

	Type  goto 12
	PrimitiveType  goto 13
	ReferenceType  goto 14
	NumericType  goto 15
	ClassType  goto 16
	DefaultTableMap  goto 17
	ListType  goto 18
	TableType  goto 19
	Name  goto 20
	SimpleName  goto 21
	QualifiedName  goto 22
	TypeDeclaration  goto 43
	ClassDeclaration  goto 26
	ClassMemberDeclaration  goto 27
	FieldDeclaration  goto 28
	MethodDeclaration  goto 29
	MethodHeader  goto 30


state 25
	TypeDeclarations : TypeDeclaration .  (39)

	.  reduce 39


state 26
	TypeDeclaration : ClassDeclaration .  (41)

	.  reduce 41


state 27
	TypeDeclaration : ClassMemberDeclaration .  (42)

	.  reduce 42


state 28
	ClassMemberDeclaration : FieldDeclaration .  (51)

	.  reduce 51


state 29
	ClassMemberDeclaration : MethodDeclaration .  (52)

	.  reduce 52


state 30
	MethodDeclaration : MethodHeader . Block  (59)

	LEFTBRACE  shift 44
	.  error

	Block  goto 45


state 31
	MethodDeclarator : IDENTIFIER . LEFTPAREN FormalParameterListOpt RIGHTPAREN  (64)

	LEFTPAREN  shift 46
	.  error


state 32
	MethodHeader : VOID MethodDeclarator .  (61)
	MethodDeclarator : MethodDeclarator . LEFTSUBSCRIPT RIGHTSUBSCRIPT  (65)

	LEFTSUBSCRIPT  shift 47
	LEFTBRACE  reduce 61


state 33
	ClassDeclaration : CLASS IDENTIFIER . ClassBody SEMICOLON  (43)

	LEFTBRACE  shift 48
	.  error

	ClassBody  goto 49


state 34
	ListType : LIST LESSTHAN . LegalElement GREATERTHAN  (20)

	DOUBLE  shift 50
	INT  shift 51
	IDENTIFIER  shift 4
	CLASSNAME  shift 5
	STRING  shift 52
	.  error

	ClassType  goto 53
	Name  goto 54
	LegalElement  goto 55
	SimpleName  goto 21
	QualifiedName  goto 22


state 35
	TableType : TABLE LESSTHAN . LegalElement GREATERTHAN  (22)
	TableType : TABLE LESSTHAN . TableIndex COMMA LegalElement GREATERTHAN  (23)

	DOUBLE  shift 50
	INT  shift 56
	IDENTIFIER  shift 4
	CLASSNAME  shift 5
	STRING  shift 57
	.  error

	ClassType  goto 53
	Name  goto 54
	LegalElement  goto 58
	TableIndex  goto 59
	SimpleName  goto 21
	QualifiedName  goto 22


state 36
	VariableDeclaratorId : IDENTIFIER .  (57)
	MethodDeclarator : IDENTIFIER . LEFTPAREN FormalParameterListOpt RIGHTPAREN  (64)

	LEFTPAREN  shift 46
	LEFTSUBSCRIPT  reduce 57
	SEMICOLON  reduce 57
	COMMA  reduce 57


state 37
	FieldDeclaration : Type VariableDeclarators . SEMICOLON  (53)
	VariableDeclarators : VariableDeclarators . COMMA VariableDeclarator  (55)

	SEMICOLON  shift 60
	COMMA  shift 61
	.  error


state 38
	VariableDeclarators : VariableDeclarator .  (54)

	.  reduce 54


state 39
	VariableDeclarator : VariableDeclaratorId .  (56)
	VariableDeclaratorId : VariableDeclaratorId . LEFTSUBSCRIPT RIGHTSUBSCRIPT  (58)

	LEFTSUBSCRIPT  shift 62
	SEMICOLON  reduce 56
	COMMA  reduce 56


state 40
	MethodHeader : Type MethodDeclarator .  (60)
	MethodDeclarator : MethodDeclarator . LEFTSUBSCRIPT RIGHTSUBSCRIPT  (65)

	LEFTSUBSCRIPT  shift 47
	LEFTBRACE  reduce 60


state 41
	QualifiedName : Name PERIOD . IDENTIFIER  (35)

	IDENTIFIER  shift 63
	.  error


state 42
	DefaultTableMap : Name LEFTSUBSCRIPT . RIGHTSUBSCRIPT  (30)

	RIGHTSUBSCRIPT  shift 64
	.  error


state 43
	TypeDeclarations : TypeDeclarations TypeDeclaration .  (40)

	.  reduce 40


state 44
	Block : LEFTBRACE . BlockStatementsOpt RIGHTBRACE SEMICOLON  (77)
	BlockStatementsOpt : .  (79)

	BREAK  shift 65
	DOUBLE  shift 1
	FOR  shift 66
	IF  shift 67
	INT  shift 2
	RETURN  shift 68
	WHILE  shift 69
	IDENTIFIER  shift 4
	CLASSNAME  shift 5
	LIST  shift 7
	TABLE  shift 8
	STRING  shift 9
	BOOL  shift 10
	INTLIT  shift 70
	DOUBLELIT  shift 71
	STRINGLIT  shift 72
	BOOLFALSE  shift 73
	BOOLTRUE  shift 74
	NULLVAL  shift 75
	LEFTPAREN  shift 76
	LEFTBRACE  shift 44
	SEMICOLON  shift 77
	RIGHTBRACE  reduce 79

	Literal  goto 78
	Type  goto 79
	PrimitiveType  goto 13
	ReferenceType  goto 14
	NumericType  goto 15
	ClassType  goto 80
	DefaultTableMap  goto 81
	ListType  goto 18
	TableType  goto 19
	Name  goto 82
	SimpleName  goto 21
	QualifiedName  goto 22
	Block  goto 83
	BlockStatementsOpt  goto 84
	BlockStatements  goto 85
	BlockStatement  goto 86
	LocalVariableDeclarationStatement  goto 87
	Statement  goto 88
	LocalVariableDeclaration  goto 89
	StatementWithoutTrailingSubstatement  goto 90
	IfThenStatement  goto 91
	IfThenElseStatement  goto 92
	IfThenElseIfStatement  goto 93
	WhileStatement  goto 94
	ForStatement  goto 95
	EmptyStatement  goto 96
	ExpressionStatement  goto 97
	BreakStatement  goto 98
	ReturnStatement  goto 99
	StatementExpression  goto 100
	Assignment  goto 101
	MethodInvocation  goto 102
	ClassInstanceCreationExpression  goto 103
	Primary  goto 104
	FieldAccess  goto 105
	ListTableAccess  goto 106
	LeftHandSide  goto 107


state 45
	MethodDeclaration : MethodHeader Block .  (59)

	.  reduce 59


state 46
	MethodDeclarator : IDENTIFIER LEFTPAREN . FormalParameterListOpt RIGHTPAREN  (64)
	FormalParameterListOpt : .  (63)

	DOUBLE  shift 1
	INT  shift 2
	IDENTIFIER  shift 4
	CLASSNAME  shift 5
	LIST  shift 7
	TABLE  shift 8
	STRING  shift 9
	BOOL  shift 10
	RIGHTPAREN  reduce 63

	Type  goto 108
	PrimitiveType  goto 13
	ReferenceType  goto 14
	NumericType  goto 15
	ClassType  goto 16
	DefaultTableMap  goto 17
	ListType  goto 18
	TableType  goto 19
	Name  goto 20
	SimpleName  goto 21
	QualifiedName  goto 22
	FormalParameterListOpt  goto 109
	FormalParameterList  goto 110
	FormalParameter  goto 111


state 47
	MethodDeclarator : MethodDeclarator LEFTSUBSCRIPT . RIGHTSUBSCRIPT  (65)

	RIGHTSUBSCRIPT  shift 112
	.  error

